--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ejs": "^3.0.1",
+    "express-mysql-session": "^2.1.3",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
