--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon ./index.js",
+    "test": "mocha ./index.js",
     "dev": "nodemon ./index.js",
     "start": "nodemon index.js"
   },
@@ -16,6 +16,7 @@
     "express-mysql-session": "^2.1.3",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
+    "mocha": "^7.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
   },
