--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.0.2",
     "express-mysql-session": "^2.1.3",
     "express-session": "^1.17.0",
+    "express-validator": "5.3.1",
     "mocha": "^7.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
@@ -22,7 +23,6 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
-    "express-validator": "^5.3.1",
     "jquery": "^3.4.1"
   }
 }
