--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "mysql": "^2.18.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "ejs": "^3.0.2",
+    "express": "^4.17.1",
     "express-mysql-session": "^2.1.3",
     "express-session": "^1.17.0",
-    "express": "^4.17.1",
     "express-validator": "^5.3.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "mysql": "^2.18.1"
   }
 }
